syntax = "proto3";

package api.common;

option java_package = "";
option java_outer_classname = "";
option java_multiple_files = true;
option objc_class_prefix = "";
// golang import path
option go_package = "app/api/common";
option php_namespace = "SDK\\Api\\Common";

// 通用头部，所有请求必须加入
message RequestHeader {
  string clientId = 1;
  string requestId = 2;
  string traceId = 3;
  string serverId = 4;
  string token = 5;
  string sign = 6;
  string timeout = 7;
}

// 通用尾部，所有响应必须加入
message ReplyHeader {
  int32 code = 1;
  string message = 2;
}

// https://colobu.com/2017/03/16/Protobuf3-language-guide/
// https://blog.csdn.net/u011518120/article/details/54604615

// 任意类型支持
// import "google/protobuf/any.proto";
// message ErrorStatus {
//   string message = 1;
//   repeated google.protobuf.Any details = 2;
// }

// 你的消息中有很多可选字段， 并且同时至多一个字段会被设置, 不支持repeated特性
// message SampleMessage {
//   oneof test_oneof {
//     string name = 4;
//     SubMessage sub_message = 9;
//   }
// }
